[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Enemies/Maggot.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Smarter Maggot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5421, 8.26848 )

[sub_resource type="Animation" id=2]
resource_name = "Maggot Crawl"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 8 ), Rect2( 16, 0, 16, 8 ), Rect2( 32, 0, 16, 8 ), Rect2( 48, 0, 16, 8 ), Rect2( 64, 0, 16, 8 ), Rect2( 80, 0, 16, 8 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.5288, 4.29797 )

[sub_resource type="CircleShape2D" id=4]
radius = 267.693

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 5.3354 )

[node name="Smarter Maggot" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0393734, -0.19058 )
scale = Vector2( 0.669997, 0.25 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Maggot Crawl" = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.16637 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 0, 16, 8 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6.06754, 0 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="HitZone" type="Area2D" parent="."]
position = Vector2( -0.0350804, -9.94653e-07 )
scale = Vector2( 0.5, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2( 0, -2.4411 )
shape = SubResource( 3 )

[node name="DetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.31498, 0.708706 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3.46484 )
shape = SubResource( 5 )

[connection signal="area_entered" from="HitZone" to="." method="_on_HitZone_area_entered"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_DetectionZone_area_entered"]
[connection signal="area_exited" from="DetectionZone" to="." method="_on_DetectionZone_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
